--- a/作用域和链接属性.md
+++ b/作用域和链接属性.md
@@ -1,6 +1,6 @@
-# 作用域和链接属性
+## 作用域和链接属性
 
-# 作用域
+## 作用域
 
 C语言编译器可以确认4种不同类型的作用域：
 
@@ -8,7 +8,7 @@ C语言编译器可以确认4种不同类型的作用域：
 * 文件作用域
 * 原型作用域
 
-## 代码块作用域
+#### 代码块作用域
 
 代码块中定义的变量，到该代码块‘}’结束时
 
@@ -38,7 +38,7 @@ int main(void){
 }
 ```
 
-## 文件作用域
+#### 文件作用域
 
 任何在代码块之外声明的标识符都具有文件作用域，作用范围是从他们的声明位置开始，到文件的结尾处都是可以访问的
 
@@ -67,13 +67,13 @@ void func(void){
 
 全局变量，默认初始化为0
 
-## 函数作用域
+#### 函数作用域
 
 只适用goto语句
 
-## 定义和声明
+#### 定义和声明
 
-## 链接属性
+#### 链接属性
 
 * external 外部的
 * internal 内部的
