--- a/内存管理.md
+++ b/内存管理.md
@@ -1,6 +1,6 @@
 # 内存管理
 
-# 内存分区
+## 内存分区
 
 * 常量区
 * 栈区
@@ -8,7 +8,7 @@
 * 静态区
 * 堆区
 
-# 常量区
+## 常量区
 
 * 整形常量
 * 浮点常量
@@ -20,7 +20,7 @@
 
 > 不可修改
 
-# 栈区
+## 栈区
 
 1. 局部变量
 2. 函数形参
@@ -33,7 +33,7 @@
 > 2. 空间少
 > 3. 生命周期和作用域从定义的位置开始到“}”结束
 
-# 全局区
+## 全局区
 
 全局变量
 
@@ -68,11 +68,11 @@ int main(int argc, char ** argv){
 }
 ```
 
-# 静态区
+## 静态区
 
----
 
-## 静态局部变量
+
+### 静态局部变量
 
 **特点：**​
 
@@ -80,7 +80,7 @@ int main(int argc, char ** argv){
 > 2. 作用域     从定义的开始到“}”结束
 > 3. 只被初始化一次
 
-## 静态全局变量
+### 静态全局变量
 
 ```c
 #include <stdio.h>
@@ -104,7 +104,7 @@ int main(){
 > 1. 生命周期         程序开始到程序结束
 > 2. 作用域             当前文件
 
-# 堆区
+## 堆区
 
 **特点：**​
 
@@ -133,7 +133,7 @@ int main(){
 
 > ​`char *p = malloc(500); <==> char p[500];`​
 
-# <u>GetMemory的几个笔试题</u>
+## <u>GetMemory的几个笔试题</u>
 
 Getmemory的几个经典的关于内存的笔试题
 
