--- a/参数和指针.md
+++ b/参数和指针.md
@@ -1,17 +1,17 @@
 # 参数和指针
 
-# 参数和返回值
+## 参数和返回值
 
----
+
 
 类型名 函数名（参数列表）  
 {  
 	函数体  
 }
 
-# 形参和实参
+## 形参和实参
 
----
+
 
 ```c
 #include <stdio.h>
@@ -31,9 +31,9 @@ int main()
 }
 ```
 
-# 传值和传址
+## 传值和传址
 
----
+
 
 传值
 
@@ -103,9 +103,9 @@ in swap, before: x = 3, y = 5
 in swap,after: x= 5, y = 3  
 in main, after: x = 5, y = 3
 
-# 可变参数
+## 可变参数
 
----
+
 
 需要使用头文件`#include <stdarg.h>`​
 
@@ -140,7 +140,7 @@ int main(void)
 
 result = 6
 
-# myPrint()实现
+## myPrint()实现
 
 ```c
 #include <stdarg.h>
@@ -254,9 +254,9 @@ int main(void)
 }
 ```
 
-# 常用操作
+## 常用操作
 
----
+
 
 *不使用第三变量交换两变量：*
 
@@ -327,14 +327,14 @@ void getDays(int nowYear, int nowMonth, int nowDay)
 }
 ```
 
-### printf()函数
+###### printf()函数
 
----
+
 
 **specifier（转换字符，必选）的内容及含义如下：**
 
 |**转换字符**|**参数类型；转换结果**|
-| ---| ----------------------------------------------------------------------------|
+| | -|
 |c|char；字符|
 |d|int；有符号十进制整数|
 |i|同上|
@@ -359,16 +359,16 @@ void getDays(int nowYear, int nowMonth, int nowDay)
 **flags（标志，可选）的内容即含义如下：**
 
 |**标志**|**含义**|
-| ------| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| | -|
 |-|指定被转换的参数在其字段内左对齐（默认是右对齐）|
 |+|指定在输出的数前面加上正负号|
 |空格|如果第一个字符不是正负号，则在其前面加上一个空格|
 |0|对于数值转换，当输出长度小于字段宽度时，添加前导 0 进行填充|
-|#|指定另一种输出形式：<br />1. 如果转换字符为 o，则第一个数字为 0<br />2. 如果转换字符为 x 或 X，则指定在输出的非 0 值前加 0x 或 0X<br />3. 对于转换字符为 e、E、f、g 或 G 的情况，指定输出总是包含一个小数点。另外，对于转换字符为 g 或 G，还指定输出值尾部无意义的 0 将被保留|
+|##|指定另一种输出形式：<br />1. 如果转换字符为 o，则第一个数字为 0<br />2. 如果转换字符为 x 或 X，则指定在输出的非 0 值前加 0x 或 0X<br />3. 对于转换字符为 e、E、f、g 或 G 的情况，指定输出总是包含一个小数点。另外，对于转换字符为 g 或 G，还指定输出值尾部无意义的 0 将被保留|
 
 注：flags 可同时出现多个，且无顺序要求。
 
-# 函数原则
+## 函数原则
 
 * 低耦合
 * 高内聚
