--- a/字符串.md
+++ b/字符串.md
@@ -1,12 +1,11 @@
 # 字符串
 
-# 1.字符常量
+## 1.字符常量
 
----
 
 > **'a'       'b'       'c'       '5'**
 
-## 1.1 ASCII
+#### 1.1 ASCII
 
 ASCII 字符表上的数字 0~31 以及 127（共 33 个）分配给了控制字符，用于控制像打印机等一些外围设备：
 
@@ -51,7 +50,7 @@ ASCII 字符表上的数字 0~31 以及 127（共 33 个）分配给了控制字
 
 ![image](assets/image-20230716190042-kf5jx3m.png)​
 
-## 1.2 转义字符
+#### 1.2 转义字符
 
 ​`printf("a = %%d", 3);// a = %d`​​
 
@@ -73,19 +72,19 @@ int main(){
 }
 ```
 
-## 1.3 0        '0'       '\0'的区别
+#### 1.3 0        '0'       '\0'的区别
 
 > '0'    ==    48
 >
 > '\0'   ==    0   空字符
 
-# 2. 字符串常量
+## 2. 字符串常量
 
 > &quot;abcdef&quot;            &quot;123456&quot;
 
-## 2.1 "xxx" 表示的是字符串首字符的地址
+#### 2.1 "xxx" 表示的是字符串首字符的地址
 
-## 2.2 为什么char*存储字符串
+#### 2.2 为什么char*存储字符串
 
                   ![image](assets/image-20230716192604-ufw0ng2.png)​
 
@@ -100,7 +99,7 @@ int main() {
 }
 ```
 
-## 2.3 计算字符串的长度
+#### 2.3 计算字符串的长度
 
 ```c
 #include <stdio.h>
@@ -121,11 +120,11 @@ int main() {
 }
 ```
 
-# 3.字符数组和字符串常量的区别
+## 3.字符数组和字符串常量的区别
 
 ---
 
-## 3.1 常量区
+#### 3.1 常量区
 
 不可用修改
 
@@ -135,7 +134,7 @@ int main() {
 * 字符串常量           &quot;abcdef&quot;
 * 地址常量              &amp;a      数组名       函数名
 
-## 3.2 字符数组和字符串常量
+#### 3.2 字符数组和字符串常量
 
 ​![image](assets/image-20230716200630-5vy0fid.png)​
 
