--- a/局部变量和全局变量.md
+++ b/局部变量和全局变量.md
@@ -1,8 +1,8 @@
 # 局部变量和全局变量
 
-# 局部变量和全局变量
+## 局部变量和全局变量
 
-## 不同函数的变量无法相互访问
+### 不同函数的变量无法相互访问
 
 ```c
 #include <stdio.h>
@@ -24,9 +24,6 @@ int main(void){
 
 before: 520  
 after : 520
-
-# 常量和指针
-
 ‍
 
 ‍
