--- a/指向指针的指针.md
+++ b/指向指针的指针.md
@@ -1,6 +1,6 @@
 # 指向指针的指针
 
-# 指向指针的指针
+## 指向指针的指针
 
 ```c
 #include <stdio.h>
@@ -26,7 +26,7 @@ int main(void)
 
 ‍
 
-# 指针数组和指向指针的指针
+## 指针数组和指向指针的指针
 
 ```c
 #include <stdio.h>
