--- a/指针函数和函数指针.md
+++ b/指针函数和函数指针.md
@@ -1,8 +1,7 @@
 # 指针函数和函数指针
 
-# 指针函数
+## 指针函数
 
----
 
 ```c
 #include <stdio.h>
@@ -48,9 +47,8 @@ int main()
 
 **不要返回局部变量的地址**​
 
-# 函数指针
+## 函数指针
 
----
 
 ​`int (*p)()`​
 
@@ -78,9 +76,8 @@ int main()
 }
 ```
 
-# 函数指针作为参数
+## 函数指针作为参数
 
----
 
 ```c
 #include <stdio.h>
@@ -111,7 +108,7 @@ int main()
 }
 ```
 
-# 函数指针作为返回值
+## 函数指针作为返回值
 
 ```c
 #include <stdio.h>
