--- a/参数和指针.md
+++ b/参数和指针.md
@@ -140,7 +140,7 @@ int main(void)
 
 result = 6
 
-## myPrint()实现
+## myPrintf()实现
 
 ```c
 #include <stdarg.h>
@@ -327,46 +327,6 @@ void getDays(int nowYear, int nowMonth, int nowDay)
 }
 ```
 
-###### printf()函数
-
-
-
-**specifier（转换字符，必选）的内容及含义如下：**
-
-|**转换字符**|**参数类型；转换结果**|
-| | -|
-|c|char；字符|
-|d|int；有符号十进制整数|
-|i|同上|
-|e|double；以指数形式输出单、双精度浮点数（小写 e）|
-|E|同上（大写 E）|
-|f|double；以小数形式输出单、双精度浮点数|
-|g|double；以 %f 或 %e 中较短的输出宽度输出单、双精度浮点数（指数显示小写 e）|
-|G|同上（指数显示大写 E）|
-|o|unsigned int；无符号八进制（无前导 0）|
-|s|char *；字符串|
-|u|int；无符号十进制|
-|x|unsigned int；无符号十六进制（无前导 0x）|
-|X|同上（无前导 0X）|
-|p|void *；指针值|
-|n|int *；存放已写字符的个数|
-|%|不进行参数转换；% 自身|
-
-*注：如果 % 后边的字符不是转换字符，则其行为没有定义*
-
-‍
-
-**flags（标志，可选）的内容即含义如下：**
-
-|**标志**|**含义**|
-| | -|
-|-|指定被转换的参数在其字段内左对齐（默认是右对齐）|
-|+|指定在输出的数前面加上正负号|
-|空格|如果第一个字符不是正负号，则在其前面加上一个空格|
-|0|对于数值转换，当输出长度小于字段宽度时，添加前导 0 进行填充|
-|##|指定另一种输出形式：<br />1. 如果转换字符为 o，则第一个数字为 0<br />2. 如果转换字符为 x 或 X，则指定在输出的非 0 值前加 0x 或 0X<br />3. 对于转换字符为 e、E、f、g 或 G 的情况，指定输出总是包含一个小数点。另外，对于转换字符为 g 或 G，还指定输出值尾部无意义的 0 将被保留|
-
-注：flags 可同时出现多个，且无顺序要求。
 
 ## 函数原则
 
