--- a/内存管理.md
+++ b/内存管理.md
@@ -16,7 +16,7 @@
 * 字符串常量
 * 地址常量：数组名、函数名
 
-**特点：**​
+__特点：__
 
 > 不可修改
 
@@ -25,7 +25,7 @@
 1. 局部变量
 2. 函数形参
 
-**特点：**​
+__特点：__
 
 > 租来的房子，房子到期自动回收
 >
@@ -37,7 +37,7 @@
 
 全局变量
 
-**特点：**​
+__特点__：​
 
 > 1. 局部大于全局
 > 2. 默认初始化0
@@ -61,7 +61,7 @@ void setValue(int g) {
 
 int g_value = 100;
 
-int main(int argc, char ** argv){
+int main(int argc, char __ argv){
     setValue(200);
     printf("%d\n", g_value);
     return 0;
@@ -74,7 +74,7 @@ int main(int argc, char ** argv){
 
 ### 静态局部变量
 
-**特点：**​
+__特点__：​
 
 > 1. 生命周期 程序开始到程序结束
 > 2. 作用域     从定义的开始到“}”结束
@@ -99,14 +99,14 @@ int main(){
 }
 ```
 
-**特点：**
+__特点：__
 
 > 1. 生命周期         程序开始到程序结束
 > 2. 作用域             当前文件
 
 ## 堆区
 
-**特点：**​
+__特点：__​
 
 > 自己买的房子，不会自动释放
 >
@@ -139,7 +139,7 @@ Getmemory的几个经典的关于内存的笔试题
 
 输出结果以及出现的错误
 
-**Test1**
+__Test1__
 
 ```c
 void GetMemory1(char* p) {
@@ -155,7 +155,7 @@ void Test1() {
 
 *p 是值传递， *str不会被改变
 
-**Test2**
+__Test2__
 
 ```c
 char* GetMemory2() {
@@ -172,7 +172,7 @@ void Test2() {
 
 函数不能返回局部变量的地址
 
-**Test3**
+__Test3__
 
 ```c
 char* GetMemory3() {
@@ -189,7 +189,7 @@ void Test3() {
 
 hello world
 
-**Test4**
+__Test4__
 
 ```c
 char* GetMemory4() {
@@ -206,7 +206,7 @@ void Test4() {
 
 hello world
 
-**Test5**
+__Test5__
 
 ```c
 void Test5() {
@@ -223,7 +223,7 @@ void Test5() {
 
 运行错误
 
-**Test6**
+__Test6__
 
 ```c
 void Test6() {
