参数和指针.md updated from https://stackedit.cn/

--- a/参数和指针.md
+++ b/参数和指针.md
@@ -2,8 +2,6 @@
 
 ## 参数和返回值
 
-
-
 类型名 函数名（参数列表）  
 {  
 	函数体  
@@ -335,3 +333,6 @@ void getDays(int nowYear, int nowMonth, int nowDay)
 * 一个函数仅实现一个功能
 
 ‍
+<!--stackedit_data:
+eyJoaXN0b3J5IjpbLTE5MTkwODU2OV19
+-->
