内存管理.md updated from https://stackedit.cn/

--- a/内存管理.md
+++ b/内存管理.md
@@ -70,8 +70,6 @@ int main(int argc, char __ argv){
 
 ## 静态区
 
-
-
 ### 静态局部变量
 
 __特点__：​
@@ -240,3 +238,6 @@ void Test6() {
 ```
 
 ‍
+<!--stackedit_data:
+eyJoaXN0b3J5IjpbLTU4MzU4MTgwNF19
+-->
