内存管理.md updated from https://stackedit.cn/

--- a/内存管理.md
+++ b/内存管理.md
@@ -210,7 +210,7 @@ __Test5__
 void Test5() {
 	char* str = (char*)malloc(100);
 	strcpy(str, "hello");
-	free(str); // 堆空间已经释放 存放的数据未知
+	free(str); // 堆存放的数据未知
 	//str = NULL
 	if (str != NULL) {
 		strcpy(str, "wold");
@@ -239,5 +239,5 @@ void Test6() {
 
 ‍
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTUyNTgxODU4MCwtNTgzNTgxODA0XX0=
+eyJoaXN0b3J5IjpbMTI4MTYyMTMwMSwtNTgzNTgxODA0XX0=
 -->
