内存管理.md updated from https://stackedit.cn/

--- a/内存管理.md
+++ b/内存管理.md
@@ -210,8 +210,8 @@ __Test5__
 void Test5() {
 	char* str = (char*)malloc(100);
 	strcpy(str, "hello");
-	free(str); // 堆存放的数据未知
-	//str = NULL
+	free(str); // 堆存放的数据释放
+	//str = NULL //为了防止访问非法的空间，释放后，指向NULL
 	if (str != NULL) {
 		strcpy(str, "wold");
 		printf(str);
@@ -239,5 +239,5 @@ void Test6() {
 
 ‍
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI4MTYyMTMwMSwtNTgzNTgxODA0XX0=
+eyJoaXN0b3J5IjpbLTEyOTM1MzI2NzksLTU4MzU4MTgwNF19
 -->
