内存管理.md updated from https://stackedit.cn/

--- a/内存管理.md
+++ b/内存管理.md
@@ -236,8 +236,9 @@ void Test6() {
 	}
 }
 ```
+释放时地址应和申请时的地址一致
 
 ‍
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyOTM1MzI2NzksLTU4MzU4MTgwNF19
+eyJoaXN0b3J5IjpbLTEwNTM1MTE1NjEsLTU4MzU4MTgwNF19
 -->
