内存管理.md updated from https://stackedit.cn/

--- a/内存管理.md
+++ b/内存管理.md
@@ -151,7 +151,7 @@ void Test1() {
 }
 ```
 
-*p 是值传递， *str不会被改变
+p 是值传递，str不会被改变
 
 __Test2__
 
@@ -240,5 +240,6 @@ void Test6() {
 
 ‍
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwNTM1MTE1NjEsLTU4MzU4MTgwNF19
+eyJoaXN0b3J5IjpbLTE1NzExNzU4NywtMTA1MzUxMTU2MSwtNT
+gzNTgxODA0XX0=
 -->
