内存管理.md updated from https://stackedit.cn/

--- a/内存管理.md
+++ b/内存管理.md
@@ -152,6 +152,8 @@ void Test1() {
 ```
 
 p 是值传递，str不会被改变
+改进方法：
+1. 将GetMemory1()返回值类型改为i
 
 __Test2__
 
@@ -167,8 +169,7 @@ void Test2() {
 	printf(str);
 }
 ```
-
-函数不能返回局部变量的地址
+p中存放的是栈区的地址，函数结束后栈区数据被释放
 
 __Test3__
 
@@ -240,6 +241,6 @@ void Test6() {
 
 ‍
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1NzExNzU4NywtMTA1MzUxMTU2MSwtNT
+eyJoaXN0b3J5IjpbMTU4NTMwMTAyNywtMTA1MzUxMTU2MSwtNT
 gzNTgxODA0XX0=
 -->
