内存管理.md updated from https://stackedit.cn/

--- a/内存管理.md
+++ b/内存管理.md
@@ -153,7 +153,8 @@ void Test1() {
 
 p 是值传递，str不会被改变
 改进方法：
-1. 将GetMemory1()返回值类型改为i
+1. 将GetMemory1()返回值类型改为char *,返回堆区的地址，并用str接收
+2. 将GetMemory1()的参数类型改为二级指针，传入str的地址即可
 
 __Test2__
 
@@ -241,6 +242,6 @@ void Test6() {
 
 ‍
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU4NTMwMTAyNywtMTA1MzUxMTU2MSwtNT
+eyJoaXN0b3J5IjpbLTQxNzIxNTg4MiwtMTA1MzUxMTU2MSwtNT
 gzNTgxODA0XX0=
 -->
