内存管理.md updated from https://stackedit.cn/

--- a/内存管理.md
+++ b/内存管理.md
@@ -154,9 +154,33 @@ void Test1() {
 p 是值传递，str不会被改变
 改进方法：
 1. 将GetMemory1()返回值类型改为char *,返回堆区的地址，并用str接收
-```
+```c
+char* GetMemory1(void) {
 
-3. 将GetMemory1()的参数类型改为二级指针，传入str的地址即可
+	return (char *)malloc(100);
+
+}
+
+void Test1() {
+
+	char* str = NULL;
+
+	str = GetMemory1();
+
+	strcpy(str, "hello world");
+
+	printf(str);
+
+	free(str);
+
+	str = NULL;
+
+}
+```
+2. 将GetMemory1()的参数类型改为二级指针，传入str的地址即可
+```c
+
+```
 
 __Test2__
 
@@ -244,6 +268,6 @@ void Test6() {
 
 ‍
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg5MzE3MjM0MSwtNDE3MjE1ODgyLC0xMD
-UzNTExNTYxLC01ODM1ODE4MDRdfQ==
+eyJoaXN0b3J5IjpbLTE5NTU2NDc1NzIsLTQxNzIxNTg4MiwtMT
+A1MzUxMTU2MSwtNTgzNTgxODA0XX0=
 -->
