内存管理.md updated from https://stackedit.cn/

--- a/内存管理.md
+++ b/内存管理.md
@@ -179,7 +179,27 @@ void Test1() {
 ```
 2. 将GetMemory1()的参数类型改为二级指针，传入str的地址即可
 ```c
+void GetMemory1(char** p) {
 
+*p = (char *)malloc(100);
+
+}
+
+void Test1() {
+
+char* str = NULL;
+
+GetMemory1(&str);
+
+strcpy(str, "hello world");
+
+printf(str);
+
+free(str);
+
+str = NULL;
+
+}
 ```
 
 __Test2__
@@ -268,6 +288,6 @@ void Test6() {
 
 ‍
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5NTU2NDc1NzIsLTQxNzIxNTg4MiwtMT
-A1MzUxMTU2MSwtNTgzNTgxODA0XX0=
+eyJoaXN0b3J5IjpbMTM3MzI1MDMyNCwtNDE3MjE1ODgyLC0xMD
+UzNTExNTYxLC01ODM1ODE4MDRdfQ==
 -->
