内存管理.md updated from https://stackedit.cn/

--- a/内存管理.md
+++ b/内存管理.md
@@ -152,7 +152,7 @@ void Test1() {
 ```
 
 p 是值传递，str不会被改变
-改进方法：
+修改方法：
 1. 将GetMemory1()返回值类型改为char *,返回堆区的地址，并用str接收
 ```c
 char* GetMemory1(void) {
@@ -217,7 +217,7 @@ void Test2() {
 }
 ```
 p中存放的是栈区的地址，函数结束后栈区数据被释放
-
+修改方法：Test3 or Test4
 
 __Test3__
 
@@ -268,7 +268,9 @@ void Test5() {
 }
 ```
 
-运行错误
+堆空间已经释放，访问非法
+修改方法：
+1. 将free()yid
 
 __Test6__
 
@@ -289,6 +291,6 @@ void Test6() {
 
 ‍
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI0Nzc5MjQ5MCwtNDE3MjE1ODgyLC0xMD
+eyJoaXN0b3J5IjpbLTExODU1Mzg1NCwtNDE3MjE1ODgyLC0xMD
 UzNTExNTYxLC01ODM1ODE4MDRdfQ==
 -->
