内存管理.md updated from https://stackedit.cn/

--- a/内存管理.md
+++ b/内存管理.md
@@ -153,7 +153,7 @@ void Test1() {
 
 p 是值传递，str不会被改变
 修改方法：
-1. 将GetMemory1()返回值类型改为char *,返回堆区的地址，并用str接收
+1. 将`GetMemory1()`返回值类型改为char *,返回堆区的地址，并用`str`接收
 ```c
 char* GetMemory1(void) {
 
@@ -270,7 +270,7 @@ void Test5() {
 
 堆空间已经释放，访问非法
 修改方法：
-1. 将free()yid
+1. 将free()移动到程序末尾
 
 __Test6__
 
@@ -288,9 +288,11 @@ void Test6() {
 }
 ```
 释放时地址应和申请时的地址一致
+修改方法：
+1. 删除`str += 6;`并，
 
 ‍
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExODU1Mzg1NCwtNDE3MjE1ODgyLC0xMD
-UzNTExNTYxLC01ODM1ODE4MDRdfQ==
+eyJoaXN0b3J5IjpbLTEzOTQzNTAyNTYsLTQxNzIxNTg4MiwtMT
+A1MzUxMTU2MSwtNTgzNTgxODA0XX0=
 -->
