内存管理.md updated from https://stackedit.cn/

--- a/内存管理.md
+++ b/内存管理.md
@@ -151,7 +151,7 @@ void Test1() {
 }
 ```
 
-p 是值传递，str不会被改变
+`p `是值传递，`str`不会被改变
 修改方法：
 1. 将`GetMemory1()`返回值类型改为char *,返回堆区的地址，并用`str`接收
 ```c
@@ -177,7 +177,7 @@ void Test1() {
 
 }
 ```
-2. 将GetMemory1()的参数类型改为二级指针，传入str的地址即可
+2. 将`GetMemory1()`的参数类型改为二级指针，传入`str`的地址即可
 ```c
 void GetMemory1(char** p) {
 
@@ -216,7 +216,7 @@ void Test2() {
 	printf(str);
 }
 ```
-p中存放的是栈区的地址，函数结束后栈区数据被释放
+`p`中存放的是栈区的地址，函数结束后栈区数据被释放
 修改方法：Test3 or Test4
 
 __Test3__
@@ -234,7 +234,7 @@ void Test3() {
 }
 ```
 
-hello world
+输出："hello world"
 
 __Test4__
 
@@ -251,7 +251,7 @@ void Test4() {
 }
 ```
 
-hello world
+输出："hello world"
 
 __Test5__
 
@@ -270,7 +270,7 @@ void Test5() {
 
 堆空间已经释放，访问非法
 修改方法：
-1. 将free()移动到程序末尾
+1. 将`free()`移动到程序末尾
 
 __Test6__
 
@@ -289,10 +289,10 @@ void Test6() {
 ```
 释放时地址应和申请时的地址一致
 修改方法：
-1. 删除`str += 6;`并，
+1. 删除`str += 6;`，并将`free()`移动到程序末尾
 
 ‍
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzOTQzNTAyNTYsLTQxNzIxNTg4MiwtMT
-A1MzUxMTU2MSwtNTgzNTgxODA0XX0=
+eyJoaXN0b3J5IjpbNjE3NjAwNTA1LC00MTcyMTU4ODIsLTEwNT
+M1MTE1NjEsLTU4MzU4MTgwNF19
 -->
