参数和指针.md updated from https://stackedit.cn/

--- a/参数和指针.md
+++ b/参数和指针.md
@@ -4,7 +4,7 @@
 
 类型名 函数名（参数列表）  
 {  
-	函数体  
+&emsp;函数体  
 }
 
 ## 形参和实参
@@ -319,5 +319,6 @@ void getDays(int nowYear, int nowMonth, int nowDay)
 
 ‍
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTMwMDEwNjY2NCwtMTcwMzczNDE0N119
+eyJoaXN0b3J5IjpbMTM5OTg3NTIwMCwtMzAwMTA2NjY0LC0xNz
+AzNzM0MTQ3XX0=
 -->
