原码、补码、反码.md updated from https://stackedit.cn/

--- a/原码、补码、反码.md
+++ b/原码、补码、反码.md
@@ -1,17 +1,13 @@
 # 原码、补码、反码
 
-## 正数的原码、反码、补码一致
+## 原码
+1. 正数的原码、补码、反码一致
+2. 
 
-补码 = ~原码 + 1
-
-0000 0000 0000 0001
-
-1111 1111 1111 1110 补码
-
-1111 1111 1111 1101 反码
-
-1000 0000 0000 0010 原码
 
 ‍
 
 ‍
+<!--stackedit_data:
+eyJoaXN0b3J5IjpbNjU3NjEzMjgzXX0=
+-->
