原码、补码、反码.md updated from https://stackedit.cn/

--- a/原码、补码、反码.md
+++ b/原码、补码、反码.md
@@ -1,7 +1,7 @@
 # 原码、补码、反码
 
 ## 原码
-1. 正数的原码、补码、反码一致
+1. 正数的原码、补码、反码一致，就是其二进制形式
 2. 
 
 
@@ -9,5 +9,5 @@
 
 ‍
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjU3NjEzMjgzXX0=
+eyJoaXN0b3J5IjpbNjU3NDg0MDgxXX0=
 -->
