原码、补码、反码.md updated from https://stackedit.cn/

--- a/原码、补码、反码.md
+++ b/原码、补码、反码.md
@@ -1,13 +1,16 @@
 # 原码、补码、反码
 
+## 在计算机中，数据都是以补码的形式存储的
+
 ## 原码
 1. 正数的原码、补码、反码一致，就是其二进制形式
-2. 
+2. 负数的原码，首位为1
+例如 3 的原码为 0000 
 
 
 ‍
 
 ‍
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjU3NDg0MDgxXX0=
+eyJoaXN0b3J5IjpbLTExMjI2OTc3MTNdfQ==
 -->
