--- a/原码、补码、反码.md
+++ b/原码、补码、反码.md
@@ -5,12 +5,13 @@
 ## 原码
 1. 正数的原码、补码、反码一致，就是其二进制形式
 2. 负数的原码，首位为1
-例如 3 的原码为 0000 
+例如 3 的原码为 0000 0011
+ &emsp;&emsp;&emsp;-3 的原码为 1000 0011
 
 
 ‍
 
 ‍
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExMjI2OTc3MTNdfQ==
+eyJoaXN0b3J5IjpbLTEwODgzMzU4NDJdfQ==
 -->
