--- a/原码、补码、反码.md
+++ b/原码、补码、反码.md
@@ -8,10 +8,13 @@
 例如 3 的原码为 0000 0011
  &emsp;&emsp;&emsp;-3 的原码为 1000 0011
 
-
+## 反码
+1. 正数的反码就是其本身
+2. 负数的反码是除符号位之外，按位取反
+例如 
 ‍
 
 ‍
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwODgzMzU4NDJdfQ==
+eyJoaXN0b3J5IjpbLTIxMjc0NDU5MzBdfQ==
 -->
