--- a/原码、补码、反码.md
+++ b/原码、补码、反码.md
@@ -3,18 +3,21 @@
 ## 在计算机中，数据都是以补码的形式存储的
 
 ## 原码
-1. 正数的原码、补码、反码一致，就是其二进制形式
-2. 负数的原码，首位为1
+1. 正数的原码就是其二进制形式
+2. 负数的原码是其绝对值的二进制形式将符号位取1
 例如 3 的原码为 0000 0011
- &emsp;&emsp;&emsp;-3 的原码为 1000 0011
+ &emsp;&emsp;&emsp;-3的原码为 1000 0011
 
 ## 反码
 1. 正数的反码就是其本身
 2. 负数的反码是除符号位之外，按位取反
-例如 
+例如 -3 的反码为 1111 1100
+
+## 补码
+1. 正数的补码就是其本身
 ‍
 
 ‍
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIxMjc0NDU5MzBdfQ==
+eyJoaXN0b3J5IjpbNzY2MjU4MTcxXX0=
 -->
