原码、补码、反码.md updated from https://stackedit.cn/

--- a/原码、补码、反码.md
+++ b/原码、补码、反码.md
@@ -12,12 +12,16 @@
 1. 正数的反码就是其本身
 2. 负数的反码是除符号位之外，按位取反
 例如 -3 的反码为 1111 1100
-
 ## 补码
 1. 正数的补码就是其本身
+2. 负数的补码是其反码加1
+例如 -3 的补码为 1111 1101
+
+3 - 3 = 3 + (-3)
+
 ‍
 
 ‍
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzY2MjU4MTcxXX0=
+eyJoaXN0b3J5IjpbMTk3OTc0NTYzNV19
 -->
