原码、补码、反码.md updated from https://stackedit.cn/

--- a/原码、补码、反码.md
+++ b/原码、补码、反码.md
@@ -18,10 +18,12 @@
 例如 -3 的补码为 1111 1101
 
 3 - 3 = 3 + (-3)
-
+&emsp;0000 0011
++&nbsp;1111 1101
+--
 ‍
 
 ‍
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTk3OTc0NTYzNV19
+eyJoaXN0b3J5IjpbMTA1NjQwNjE1OV19
 -->
