原码、补码、反码.md updated from https://stackedit.cn/

--- a/原码、补码、反码.md
+++ b/原码、补码、反码.md
@@ -17,13 +17,13 @@
 2. 负数的补码是其反码加1
 例如 -3 的补码为 1111 1101
 
-3 - 3 = 3 + (-3) = 0
-&emsp;0000 0011
-+&nbsp;1111 1101
-=&nbsp;0000 0000
+&emsp;3 - 3 = 3 + (-3) = 0
+&emsp;&emsp;0000 0011
+&emsp;+&nbsp;1111 1101
+&emsp;=&nbsp;0000 0000
 ‍
 
 ‍
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTYzMTUxMjAzXX0=
+eyJoaXN0b3J5IjpbLTE4MTY0NjQyMjddfQ==
 -->
