指向指针的指针.md updated from https://stackedit.cn/

--- a/指向指针的指针.md
+++ b/指向指针的指针.md
@@ -24,8 +24,6 @@ int main(void)
 
 虽然指针可以无限的指下去， 但是不建议。
 
-‍
-
 ## 指针数组和指向指针的指针
 
 ```c
@@ -61,3 +59,6 @@ int main(void)
 
 * 避免重复分配内存
 * 只需要进行一处修改
+<!--stackedit_data:
+eyJoaXN0b3J5IjpbMTY5NjgxMDg4Nl19
+-->
