--- a/原码、补码、反码.md
+++ b/原码、补码、反码.md
@@ -5,21 +5,21 @@
 ## 原码
 1. 正数的原码就是其二进制形式
 2. 负数的原码是其绝对值的二进制形式将符号位取1  
-例如 3 的原码为 0000 0011  
+例如 &nbsp;&nbsp;3的原码为 0000 0011  
  &emsp;&emsp;&emsp;-3的原码为 1000 0011
 
 ## 反码
 1. 正数的反码就是其本身
-2. 负数的反码是除符号位之外，按位取反
+2. 负数的反码是除符号位之外，按位取反  
 例如 -3 的反码为 1111 1100
 ## 补码
 1. 正数的补码就是其本身
-2. 负数的补码是其反码加1
+2. 负数的补码是其反码加1  
 例如 -3 的补码为 1111 1101
 
-&emsp;3 - 3 = 3 + (-3) = 0
-&emsp;&emsp;0000 0011
-&emsp;+&nbsp;1111 1101
+&emsp;3 - 3 = 3 + (-3) = 0  
+&emsp;&emsp;0000 0011  
+&emsp;+&nbsp;1111 1101  
 &emsp;=&nbsp;0000 0000
 
 <!--stackedit_data:
