--- a/结构体.md
+++ b/结构体.md
@@ -25,13 +25,14 @@ struct people{
 ## 结构体内存计算
 
 ### 有效对齐值
-对齐系数：由编译器决定，也可通过`#pragma pack(n)//n为对齐系数`指定  
+对齐系数：由编译器决定(vs中默认为0)，也可通过`#pragma pack(n)//n为对齐系数`指定  
 **有效对齐值** = min(对齐系数,结构体中最长的数据类型的长度)
 
 ### 计算规则
 1. 数据成员：第一个数据成员放在offset为0
 的地方，以后的每一个成员的offset都必须是该成员的大小与有效对齐值相比较小的的数值的整数倍。
 2. 结构体作为成员：如果一个结构体里有某些结构体成员，则结构体要从其内部有效对齐值的整数倍地址开始存储
+3. 结构体的总大小，必须是其有效对齐值的整数倍，不足的要补齐。
 
 
 ## 结构体属性访问
