--- a/内存管理.md
+++ b/内存管理.md
@@ -51,7 +51,7 @@ __特点__：​
 extern int g_value;//全局变量的声明
 
 void setValue(int g) {
-	g_value = g;
+ g_value = g;
 }
 ```
 
@@ -137,162 +137,143 @@ Getmemory的几个经典的关于内存的笔试题
 
 输出结果以及出现的错误
 
-__Test1__
+### Test1
 
 ```c
 void GetMemory1(char* p) {
-	p = (char *)malloc(100);
+ p = (char *)malloc(100);
 }
 void Test1() {
-	char* str = NULL;
-	GetMemory1(str);
-	strcpy(str, "hello world");
-	printf(str);
+    char* str = NULL;
+    GetMemory1(str);
+    strcpy(str, "hello world");
+    printf(str);
 }
 ```
 
-`p `是值传递，`str`不会被改变
+`p`是值传递，`str`不会被改变
+
 修改方法：
+
 1. 将`GetMemory1()`返回值类型改为char *,返回堆区的地址，并用`str`接收
+
 ```c
 char* GetMemory1(void) {
-
-	return (char *)malloc(100);
-
+    return (char *)malloc(100);
 }
 
 void Test1() {
-
-	char* str = NULL;
-
-	str = GetMemory1();
-
-	strcpy(str, "hello world");
-
-	printf(str);
-
-	free(str);
-
-	str = NULL;
-
+    char *str = NULL;
+    str = GetMemory1();
+    strcpy(str, "hello world");
+    printf(str);
+    free(str);
+    str = NULL;
 }
 ```
+
 2. 将`GetMemory1()`的参数类型改为二级指针，传入`str`的地址即可
+
 ```c
-void GetMemory1(char** p) {
-
-	*p = (char *)malloc(100);
-
-}
-
 void Test1() {
-
-	char* str = NULL;
-
-	GetMemory1(&str);
-
-	strcpy(str, "hello world");
-
-	printf(str);
-
-	free(str);
-
-	str = NULL;
-
+    char *str = NULL;
+    GetMemory1(&str);
+    strcpy(str, "hello world");
+    printf(str);
+    free(str);
+    str = NULL;
 }
 ```
 
-__Test2__
+### Test2
 
 ```c
-char* GetMemory2() {
-	char p[] = "hello world"; //p是局部变量
-	return p; //试图返回局部变量的地址
+char *GetMemory2() {
+    char p[] = "hello world"; // p是局部变量
+    return p;                 // 试图返回局部变量的地址
 }
 
 void Test2() {
-	char* str = NULL;
-	str = GetMemory2();
-	printf(str);
+    char *str = NULL;
+    str = GetMemory2();
+    printf(str);
 }
 ```
+
 `p`中存放的是栈区的地址，函数结束后栈区数据被释放
 修改方法：Test3 or Test4
 
-__Test3__
+### Test3
 
 ```c
-char* GetMemory3() {
-	char *p = "hello world"; //p是局部变量
-	return p; //返回常量的地址
+char *GetMemory3() {
+    char *p = "hello world"; // p是局部变量
+    return p;                // 返回常量的地址
 }
 
 void Test3() {
-	char* str = NULL;
-	str = GetMemory3();
-	printf(str);
+    char *str = NULL;
+    str = GetMemory3();
+    printf(str);
 }
 ```
 
 输出："hello world"
 
-__Test4__
+### Test4
 
 ```c
-char* GetMemory4() {
-	static char p[] = "hello world";
-	return p;
+char *GetMemory4() {
+    static char p[] = "hello world";
+    return p;
 }
 
 void Test4() {
-	char* str = NULL;
-	str = GetMemory4();
-	printf(str);
+    char *str = NULL;
+    str = GetMemory4();
+    printf(str);
 }
 ```
 
 输出："hello world"
 
-__Test5__
+### Test5
 
 ```c
 void Test5() {
-	char* str = (char*)malloc(100);
-	strcpy(str, "hello");
-	free(str); // 堆存放的数据释放
-	//str = NULL //为了防止访问非法的空间，释放后，指向NULL
-	if (str != NULL) {
-		strcpy(str, "wold");
-		printf(str);
-	}
+    char *str = (char *)malloc(100);
+    strcpy(str, "hello");
+    free(str); // 堆存放的数据释放
+    // str = NULL //为了防止访问非法的空间，释放后，指向NULL
+    if (str != NULL) {
+        strcpy(str, "wold");
+        printf(str);
+    }
 }
 ```
 
 堆空间已经释放，访问非法
 修改方法：
+
 1. 将`free()`移动到程序末尾
 
-__Test6__
+### Test6
 
 ```c
 void Test6() {
-	char* str = (char*)malloc(100);
-	strcpy(str, "hello");
-	str += 6;
-	free(str); // str已经被修改 无法正常释放
-	//str = NULL
-	if (str != NULL) {
-		strcpy(str, "wold");
-		printf(str);
-	}
+    char *str = (char *)malloc(100);
+    strcpy(str, "hello");
+    str += 6;
+    free(str); // str已经被修改 无法正常释放
+    // str = NULL
+    if (str != NULL) {
+        strcpy(str, "wold");
+        printf(str);
+    }
 }
 ```
+
 释放时地址应和申请时的地址一致
 修改方法：
-1. 删除`str += 6;`，并将`free()`移动到程序末尾
 
-‍
-<!--stackedit_data:
-eyJoaXN0b3J5IjpbNjE3NjAwNTA1LC00MTcyMTU4ODIsLTEwNT
-M1MTE1NjEsLTU4MzU4MTgwNF19
--->
+1. 删除`str += 6;`，并将`free()`移动到程序末尾
