--- a/参数和指针.md
+++ b/参数和指针.md
@@ -1,6 +1,7 @@
 # 参数和指针
 
 ## 指针
+
 >指针只是存储内存地址的整数
 
 ## 参数和返回值
@@ -283,7 +284,7 @@ int main(void) {
 }
 ```
 
-*数组作为形参，会退化为指针*
+## 数组作为形参，会退化为指针
 
 ```c
 void printArray(int nums[]) { //数组作形参 会退化成指针
@@ -319,9 +320,3 @@ void getDays(int nowYear, int nowMonth, int nowDay)
 * 低耦合
 * 高内聚
 * 一个函数仅实现一个功能
-
-‍
-<!--stackedit_data:
-eyJoaXN0b3J5IjpbMTM5OTg3NTIwMCwtMzAwMTA2NjY0LC0xNz
-AzNzM0MTQ3XX0=
--->
