--- a/字符串.md
+++ b/字符串.md
@@ -2,10 +2,9 @@
 
 ## 1.字符常量
 
-
 > **'a'       'b'       'c'       '5'**
 
-#### 1.1 ASCII
+### 1.1 ASCII
 
 ASCII 字符表上的数字 0~31 以及 127（共 33 个）分配给了控制字符，用于控制像打印机等一些外围设备：
 
@@ -82,9 +81,9 @@ int main(){
 
 > &quot;abcdef&quot;            &quot;123456&quot;
 
-#### 2.1 "xxx" 表示的是字符串首字符的地址
+### 2.1 "xxx" 表示的是字符串首字符的地址
 
-#### 2.2 为什么char*存储字符串
+### 2.2 为什么char*存储字符串
 
 ```c
 #include <stdio.h>
@@ -97,7 +96,7 @@ int main() {
 }
 ```
 
-#### 2.3 计算字符串的长度
+### 2.3 计算字符串的长度
 
 ```c
 #include <stdio.h>
@@ -120,9 +119,7 @@ int main() {
 
 ## 3.字符数组和字符串常量的区别
 
----
-
-#### 3.1 常量区
+### 3.1 常量区
 
 不可修改
 
@@ -132,7 +129,7 @@ int main() {
 * 字符串常量           &quot;abcdef&quot;
 * 地址常量              &amp;a      数组名       函数名
 
-#### 3.2 字符数组和字符串常量
+### 3.2 字符数组和字符串常量
 
 ```c
 #include <stdio.h>
@@ -147,7 +144,7 @@ int main() {
 }
 ```
 
-**const**
+#### const
 
 ```c
 #include <stdio.h>
@@ -175,7 +172,7 @@ int main() {
 * const如果在\*左， 那么指针变量可以修改,\*指针变量不可以修改
 * const如果在\*右， 那么指针变量不可以修改，\*指针变量可以修改
 
-**strlen源码**
+#### strlen()源码
 
 ```c
 size_t strlen(const char *str) {
@@ -191,7 +188,7 @@ size_t strlen(const char *str) {
 
 指针变量的值为NULL(0), 禁止访问空指针
 
-<u>NULL可以为任意指针赋值</u>
+#### NULL可以为任意指针赋值
 
 ```c
 #include <stdio.h>
@@ -220,7 +217,7 @@ int main() {
 }
 ```
 
-**Debug 和 Release模式区别**
+#### Debug 和 Release模式区别
 
 1. Release 对程序优化了，执行效率更高
 
