--- a/联合.md
+++ b/联合.md
@@ -1,6 +1,10 @@
+# 联合
+
 ## 联合体
+
 共用体也称联合，是一种特殊的数据类型，允许在相同的内存位置存储不同的数据类型。可以定义一个带有多成员的共用体，但是任何时候只能有一个成员带有值。  
 所占内存由需要内存最大的变量决定
+
 ```c
 #include <stdio.h>
 typedef union Student{
@@ -16,10 +20,14 @@ int main(){
     return 0;
 }
 ```
+
 ## 大端和小端
+
 1. 小端：低位放在低地址 高位放在高地址
 2. 大端：低位放在高地址 高位放在低地址
+
 ## 枚举
+
 ```c
 enum WEEKS {
     SUN,
@@ -32,5 +40,5 @@ enum WEEKS {
 };
 enum WEEKS day;
 ```
-第一个枚举成员的默认值为**整型**的0，后续枚举成员的前一个上加1。  
-*可以省略枚举名，直接命名枚举变量*
+
+第一个枚举成员的默认值为**整型**的0，后续枚举成员的前一个上加1。*可以省略枚举名，直接命名枚举变量*
