--- a/预处理和多文件编程.md
+++ b/预处理和多文件编程.md
@@ -27,6 +27,48 @@
     }
 ```
 
+### 预处理器运算符
+
+#### 宏延续运算符(\)
+&emsp;&emsp;一个宏通常写在一个单行上。如果宏太长，一个单行容纳不下，则使用宏延续运算符(\)。
+
+#### 字符串常量化运算符(#)
+
+&emsp;&emsp;在宏定义中，当需要把一个宏的参数转换为字符串常量时，则使用字符串常量化运算符(#)。在宏中使用的该运算符有一个特定的参数或参数列表，例如
+
+```c
+#include <stdio.h>
+
+#define debug(x, y) printf("%s 的值是 %d \n", #x, y);
+
+int main() {
+    int num = 10;
+    debug(num, num);
+    return 0;
+}
+```
+
+#### 标记粘贴运算符(##)
+
+宏定义内的标记粘贴运算符(##)会合并两个参数，它允许在宏定义中两个独立的标记被合并为一个标记。例如
+
+```c
+#include <stdio.h>
+
+#define TYPE1(type, name) type name_##type##_type
+#define TYPE2(type, name) type name##_##type##_type
+int main() {
+    TYPE1(int, c); //int name_int_type
+    name_int_type = 10;
+    printf("%d ", name_int_type);
+    TYPE2(int, d); //int d_int_type
+    d_int_type = 20;
+    printf("%d ",d_int_type);
+    return 0;
+}
+
+```
+
 ## 多文件编程
 
 `<>`从标准库中查找头文件  
