--- a/预处理和多文件编程.md
+++ b/预处理和多文件编程.md
@@ -29,8 +29,9 @@
 
 ### 预处理器运算符
 
-#### 宏延续运算符(\)
-&emsp;&emsp;一个宏通常写在一个单行上。如果宏太长，一个单行容纳不下，则使用宏延续运算符(\)。
+#### 宏延续运算符(\\)
+
+&emsp;&emsp;一个宏通常写在一个单行上。如果宏太长，一个单行容纳不下，则使用宏延续运算符(\\)。
 
 #### 字符串常量化运算符(#)
 
