--- a/预处理和多文件编程.md
+++ b/预处理和多文件编程.md
@@ -113,3 +113,28 @@ enum {
 //7.全局变量声明
 extern int n;//不给值
 ```
+
+## 文件操作
+
+```c
+#include <stdio.h>
+#include <string.h>
+
+int main(){
+    //1.打开文件
+    FILE* fr = fopen("test.txt","r");
+    FILE* fw = fopen("notExist.txt","w");
+    if(fr == NULL || fw == NULL){
+        printf("文件不存在\n");
+        return 0;
+    }
+    //2.读写文件
+    char buf[128] = "";//过渡容器
+    while(fgets(buf, 128, fr) != NULL){
+        fputs(buf,fw);
+    //3.关闭文件
+    fclose(fr);
+    fclose(fw);
+
+}
+```
